[package]
name = "robinson_window"
version = "0.1.0"
edition = "2021"

[dependencies]
robinson_css = { version = "0.1.0", path = "../robinson_css" }
robinson_dom = { version = "0.1.0", path = "../robinson_dom" }
robinson_layout = { version = "0.1.0", path = "../robinson_layout" }
robinson_style = { version = "0.1.0", path = "../robinson_style" }
robinson_paint = { version = "0.1.0", path = "../robinson_paint" }

# other
winit = "0.28.6"
wgpu = "0.16.0"
glam = "0.24.0"
bytemuck = { version = "1.13.1", features = ["derive"] }